test/kuttl/common/openstack-lightspeed-instance/assert-openstack-lightspeed-instance.yaml
##############################################################################
#       Assert that the operator created all expected resources               #
##############################################################################

# Postgres resources
---
apiVersion: v1
kind: Service
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed
status:
  replicas: 1
  readyReplicas: 1
  availableReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed

# LCore resources
---
apiVersion: v1
kind: Service
metadata:
  name: lightspeed-app-server
  namespace: openstack-lightspeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightspeed-stack-deployment
  namespace: openstack-lightspeed
spec:
  template:
    spec:
      containers:
        - name: llama-stack
        - name: lightspeed-service-api
        - name: lightspeed-to-dataverse-exporter
status:
  replicas: 1
  readyReplicas: 1
  availableReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lightspeed-app-server
  namespace: openstack-lightspeed

# Vector DB init containers scripts
